made DiagramManager abstract, PackageDiagramManager and ClassDiagramManager extend the DiagramManager, added interfaces, extracted two classes DiagramArrangement and GraphMLFile