@@ -11,8 +11,9 @@ public class Client {
 	public static void main(String[] args) {
 		DiagramController diagramController = new Controller();
 		diagramController.createTree(args[0]);
-		diagramController.convertTreeToPackageDiagram(List.of(args[1]), args[2]);
-		// diagramController.convertTreeToClassDiagram(Arrays.asList("Command", "EditCommand", "CreateCommand", "CommandFactory"), args[2]);
+		diagramController.convertTreeToPackageDiagram(List.of(args[1]));
+		// diagramController.convertTreeToClassDiagram(Arrays.asList("Command", "EditCommand", "CreateCommand", "CommandFactory"));
+		diagramController.exportDiagramToGraphML(args[2]);
 	}
 
 }
